--- a/branches/iteration2/SuperMattsWorld/AndroidManifest.xml
+++ b/branches/iteration2/SuperMattsWorld/AndroidManifest.xml
@@ -5,14 +5,13 @@
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".FlixelDemo"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:screenOrientation="landscape"
+                  android:configChanges="keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
-
-
 </manifest> 
