--- a/branches/iteration2/SuperMattsWorld/AndroidManifest.xml
+++ b/branches/iteration2/SuperMattsWorld/AndroidManifest.xml
@@ -6,13 +6,11 @@
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".FlixelDemo"
                   android:label="@string/app_name"
-                  android:screenOrientation="landscape"
-                  android:configChanges="keyboardHidden|orientation">
+                  android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-<uses-sdk android:minSdkVersion="6"></uses-sdk>
 </manifest> 
